# piano

./: .gitignore  .gitmodules  .travis.yml  README.md  ambiata-piano.cabal  cabal.project  master.toml  piano.cabal
bench/: piano-bench.hs
csrc/: piano.c  piano.h  piano_bindings.h  piano_internal.h
main/: piano.hs
src/: Piano.hs
src/Piano/: Data.hs  Foreign.hs  Parser.hs
src/Piano/Foreign/: Bindings.hsc
test/: test-cli.hs  test.hs
test/Test/Piano/: Data.hs  Foreign.hs  Jack.hs  Parser.hs
