name:                  ambiata-piano
version:               0.0.1
license:               AllRightsReserved
author:                Ambiata <info@ambiata.com>
maintainer:            Ambiata <info@ambiata.com>
copyright:             (c) 2015 Ambiata.
synopsis:              piano
category:              System
cabal-version:         >= 1.8
build-type:            Custom
description:           piano

extra-source-files:
                    csrc/*.h
                    csrc/*.c

library
  build-depends:
                      base                            >= 3          && < 5
                    , ambiata-anemone
                    , ambiata-p
                    , ambiata-x-show
                    , ambiata-x-vector
                    , bindings-DSL                    >= 1.0.0      && <= 1.0.23
                    , bytestring                      == 0.10.*
                    , containers                      == 0.5.*
                    , semigroups                      >= 0.17       && < 0.19
                    , text                            == 1.2.*
                    , thyme                           == 0.3.*
                    , transformers                    >= 0.3        && < 0.6
                    , vector                          >= 0.11       && < 0.13
                    -- Didn't follow the PVP and changed their class for
                    -- American.Lexicographic
                    , vector-algorithms               == 0.7.0.1
                    , vector-th-unbox                 == 0.2.*

  ghc-options:
                    -Wall -O2

  hs-source-dirs:
                    src

  exposed-modules:
                    Piano
                    Piano.Data
                    Piano.Foreign
                    Piano.Foreign.Bindings
                    Piano.Parser

  include-dirs:
                    csrc

  install-includes:
                    piano.h

  includes:
                    piano.h
                    piano_bindings.h
                    piano_internal.h

  c-sources:
                    csrc/piano.c

  cc-options:
                    -std=c99 -O3 -msse4.2 -Wall -Werror -Wno-unused-command-line-argument -DCABAL=1

executable piano
  ghc-options:
                    -Wall -threaded -O2

  hs-source-dirs:
                    gen

  main-is:
                    ../main/piano.hs

  build-depends:
                      base
                    , ambiata-piano
                    , ambiata-p
                    , ambiata-x-eithert
                    , ambiata-x-optparse
                    , bytestring
                    , optparse-applicative
                    , text
                    , thyme
                    , transformers
                    , vector

benchmark piano-bench
  type:
                    exitcode-stdio-1.0

  main-is:
                    piano-bench.hs

  ghc-options:
                    -Wall -threaded -O2

  hs-source-dirs:
                    bench

  build-depends:
                      base
                    , ambiata-piano
                    , ambiata-p
                    , bytestring
                    , containers
                    , criterion
                    , thyme
                    , vector

test-suite test
  type:
                    exitcode-stdio-1.0

  main-is:
                    test.hs

  ghc-options:
                    -Wall -threaded -O2

  hs-source-dirs:
                    test

  build-depends:
                      base
                    , ambiata-piano
                    , ambiata-disorder-core
                    , ambiata-disorder-corpus
                    , ambiata-disorder-eithert
                    , ambiata-disorder-jack
                    , ambiata-p
                    , bytestring
                    , containers
                    , QuickCheck
                    , quickcheck-instances
                    , semigroups
                    , thyme
                    , vector

test-suite test-io
  type:
                    exitcode-stdio-1.0

  main-is:
                    test-io.hs

  ghc-options:
                    -Wall -threaded -O2

  hs-source-dirs:
                    test

  build-depends:
                      base
                    , ambiata-piano
                    , ambiata-disorder-core
                    , ambiata-disorder-corpus
                    , ambiata-p
                    , text
                    , QuickCheck
                    , quickcheck-instances

test-suite test-cli
  type:
                    exitcode-stdio-1.0

  main-is:
                    test-cli.hs

  ghc-options:
                    -Wall -threaded -O2

  hs-source-dirs:
                    test

  build-depends:
                      base
                    , ambiata-piano
                    , ambiata-disorder-core
