name:                  ambiata-piano
version:               0.0.1
license:               BSD3
license-file:          LICENSE
author:                Ambiata <info@ambiata.com>
maintainer:            Ambiata <info@ambiata.com>
copyright:             (c) 2015 Ambiata.
synopsis:              piano
category:              System
cabal-version:         >= 1.8
build-type:            Simple
description:           Specifation of Chord files

tested-with:
  GHC==8.0.2,
  GHC==8.2.2,
  GHC==8.4.4,
  GHC==8.6.5,
  GHC==8.8.1

extra-source-files:
                    csrc/*.h
                    csrc/*.c

source-repository head
  type:     git
  location: https://github.com/icicle-lang/piano.git

library
  build-depends:
                      base                            >= 3          && < 5
                    , ambiata-anemone
                    , ambiata-p
                    , ambiata-x-show
                    , ambiata-x-vector
                    , bindings-DSL                    >= 1.0.0      && <= 1.0.26
                    , bytestring                      >= 0.10
                    , containers                      >= 0.5
                    , semigroups                      >= 0.17       && < 0.21
                    , text                            == 1.2.*
                    , thyme                           >= 0.3        && < 0.5
                    , transformers                    >= 0.3        && < 0.6
                    , transformers-either
                    , vector                          >= 0.11       && < 0.13
                    , vector-algorithms               >= 0.8
                    , vector-th-unbox                 == 0.2.*

  ghc-options:
                    -Wall

  hs-source-dirs:
                    src

  exposed-modules:
                    Piano
                    Piano.Data
                    Piano.Foreign
                    Piano.Foreign.Bindings
                    Piano.Parser

  include-dirs:
                    csrc

  install-includes:
                    piano.h

  includes:
                    piano.h
                    piano_bindings.h
                    piano_internal.h

  c-sources:
                    csrc/piano.c

  cc-options:
                    -std=c99 -msse4.2 -Wall -Werror -Wno-unused-command-line-argument -DCABAL=1

executable piano
  ghc-options:
                    -Wall -threaded

  hs-source-dirs:
                    main

  main-is:
                    piano.hs

  build-depends:
                      base
                    , ambiata-piano
                    , ambiata-p
                    , ambiata-x-optparse
                    , bytestring
                    , optparse-applicative
                    , text
                    , thyme
                    , transformers
                    , transformers-either
                    , vector

benchmark piano-bench
  type:
                    exitcode-stdio-1.0

  main-is:
                    piano-bench.hs

  ghc-options:
                    -Wall -threaded

  hs-source-dirs:
                    bench

  build-depends:
                      base
                    , ambiata-piano
                    , ambiata-p
                    , bytestring
                    , containers
                    , criterion
                    , thyme
                    , vector

test-suite test
  type:
                    exitcode-stdio-1.0

  main-is:
                    test.hs

  ghc-options:
                    -Wall -threaded

  hs-source-dirs:
                    test

  build-depends:
                      base
                    , ambiata-piano
                    , ambiata-p
                    , bytestring
                    , containers
                    , hedgehog
                    , hedgehog-corpus
                    , hedgehog-quickcheck
                    , semigroups
                    , thyme
                    , transformers-either
                    , vector

  other-modules:
                      Test.Piano.Data
                      Test.Piano.Foreign
                      Test.Piano.Jack
                      Test.Piano.Parser
