name:                  ambiata-piano
version:               0.0.1
license:               AllRightsReserved
author:                Ambiata <info@ambiata.com>
maintainer:            Ambiata <info@ambiata.com>
copyright:             (c) 2015 Ambiata.
synopsis:              piano
category:              System
cabal-version:         >= 1.8
build-type:            Custom
description:           piano

extra-source-files:
                    csrc/*.h
                    csrc/*.c

library
  build-depends:
                      base                            >= 3          && < 5
                    , ambiata-anemone
                    , ambiata-p
                    , ambiata-x-show
                    , ambiata-x-vector
                    , bindings-DSL                    >= 1.0.0      && <= 1.0.23
                    , bytestring                      == 0.10.*
                    , containers                      == 0.5.*
                    , semigroups                      >= 0.17       && < 0.19
                    , text                            == 1.2.*
                    , thyme                           == 0.3.*
                    , transformers                    >= 0.3        && < 0.6
                    , vector                          == 0.11.*
                    , vector-algorithms               == 0.7.*
                    , vector-th-unbox                 == 0.2.*

  ghc-options:
                    -Wall -O2

  hs-source-dirs:
                    src

  exposed-modules:
                    Piano
                    Piano.Data
                    Piano.Foreign
                    Piano.Foreign.Bindings
                    Piano.Parser

  include-dirs:
                    csrc

  install-includes:
                    piano.h

  includes:
                    piano.h
                    piano_bindings.h
                    piano_internal.h

  c-sources:
                    csrc/piano.c

  cc-options:
                    -std=c99 -O3 -msse4.2 -Wall -Werror -DCABAL=1

executable piano
  ghc-options:
                    -Wall -threaded -O2

  hs-source-dirs:
                    gen

  main-is:
                    ../main/piano.hs

  build-depends:
                      base
                    , ambiata-piano
                    , ambiata-p
                    , ambiata-x-eithert
                    , ambiata-x-optparse
                    , bytestring                      == 0.10.*
                    , optparse-applicative            >= 0.11       && < 0.13
                    , text
                    , thyme                           == 0.3.*
                    , transformers                    >= 0.3        && < 0.6
                    , vector                          == 0.11.*

benchmark piano-bench
  type:
                    exitcode-stdio-1.0

  main-is:
                    piano-bench.hs

  ghc-options:
                    -Wall -threaded -O2

  hs-source-dirs:
                    bench

  build-depends:
                      base                            >= 3          && < 5
                    , ambiata-piano
                    , ambiata-p
                    , bytestring                      == 0.10.*
                    , containers                      == 0.5.*
                    , criterion                       == 1.1.*
                    , thyme                           == 0.3.*
                    , vector                          == 0.11.*

test-suite test
  type:
                    exitcode-stdio-1.0

  main-is:
                    test.hs

  ghc-options:
                    -Wall -threaded -O2

  hs-source-dirs:
                    test

  build-depends:
                      base                            >= 3          && < 5
                    , ambiata-piano
                    , ambiata-disorder-core
                    , ambiata-disorder-corpus
                    , ambiata-disorder-eithert
                    , ambiata-disorder-jack
                    , ambiata-p
                    , bytestring                      == 0.10.*
                    , containers                      == 0.5.*
                    , QuickCheck                      >= 2.8.2      && < 2.9
                    , quickcheck-instances            == 0.3.*
                    , semigroups                      >= 0.17       && < 0.19
                    , thyme                           == 0.3.*
                    , vector                          == 0.11.*

test-suite test-io
  type:
                    exitcode-stdio-1.0

  main-is:
                    test-io.hs

  ghc-options:
                    -Wall -threaded -O2

  hs-source-dirs:
                    test

  build-depends:
                      base                            >= 3          && < 5
                    , ambiata-piano
                    , ambiata-disorder-core
                    , ambiata-disorder-corpus
                    , ambiata-p
                    , text
                    , QuickCheck                      >= 2.8.2      && < 2.9
                    , quickcheck-instances            == 0.3.*

test-suite test-cli
  type:
                    exitcode-stdio-1.0

  main-is:
                    test-cli.hs

  ghc-options:
                    -Wall -threaded -O2

  hs-source-dirs:
                    test

  build-depends:
                      base                            >= 3          && < 5
                    , ambiata-piano
                    , ambiata-disorder-core
